--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,44 @@
     transform: rotate(360deg);
   }
 }
+
+.parallax{
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('images/home.jpg');
+    height: 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+}
+
+h1{
+    font-size:70px;
+}
+
+h4{
+    font-size:30px;
+}
+
+.center{
+   top:50%;
+   left:0%;
+   position: relative;
+}
+
+.triple{
+    top:50%;
+    position:relative;
+    display:flex;
+    justify-content:center;
+}
+
+@media screen and (max-width: 800px) and (min-width: 0px){
+    h1{
+        font-size: 50px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+}
